--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
        <p> Долгое время, с начала 1990-х годов, находился в аварийном состоянии, был трижды включён в список «100 главных зданий мира, которым грозит уничтожение»[3]. В 2017—2020 годах отреставрирован[4][5] по проекту АБ «Гинзбург Архитектс», функционирует как жилой дом.</p>
        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/30/Moscow%2C_Narkomfin_building_in_May_2021_03.jpg/2880px-Moscow%2C_Narkomfin_building_in_May_2021_03.jpg" alt="">
 
-   <h2>История создания дома Наркомфина</h2>
+   <h2>ИИстория создания дома Наркомфина</h2>
 
      <P>Дом Наркомфина, или 2-й дом Совнаркома (СНК) РСФСР стал одним из экспериментальных домов, построенных по результатам теоретических исследований Секции типизации Стройкома РСФСР, созданной по инициативе М. Я. Гинзбурга и работавшей под его руководством в 1928—1929 годы (в работе также участвовали М.О. Барщ, В.Н. Владимиров, А.Л. Пастернак, Г.Р. Сум-Шик). Учреждению секции предшествовала работа в 1928 года комиссии Стройкома по отбору типовых проектов жилья для строительства; в комиссию входил и М. Я. Гинзбург. Комиссия пришла к выводу, что большинство известных на тот момент проектов не могут быть использованы как типовые, поэтому для разработки типовых проектов была создана Секция типизации[6]. Подготовкой для работы над новым форматом жилья также стала работа над домом Госстраха на Малой Бронной (1926—1927, М. Я. Гинзбург и В. Н. Владимиров) и конкурс на «эскизный проект жилого дома трудящихся», проведенный журналом «Современная архитектура» (Гинзбург подал на конкурс проект «Коммунального дома А-1»). Выставка проектов конкурса состоялась в июне 1927 года
 
