--- a/index.html
+++ b/index.html
@@ -2,9 +2,32 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <head>
+  <meta charset="UTF-8">
+  <meta name="description" content="Дом Наркомфина">
+  <meta property="og:type" content="article">
+  <meta property="og:url" content="{page_url}">
+  <meta property="og:title" content="Дом Наркомфина для ФБ">
+  <meta property="og:description" content="Статья:Дом Наркомфина">
+  <meta property="og:image" content="{image_url}">
     <title>Дом Наркомфина</title>
     <link rel="stylesheet" href="stylesheets/style.css">
-    <script type="text/javascript" src="javascripts/jquerty-3.6.0.js"></script>
+    <script type="text/javascript" src="javascripts/jquery-3.6.0.js"></script>
+    <script type="text/javascript">
+    $(function() {
+    $('sidebar a').each(function() {
+    $(this).on('click', function(e) {
+      e.preventDefault();
+      var scrollTo = $(this).attr('href');
+      var whitespace = scrollTo == '#s1' ? 70 : 30;
+      $('html,body').animate({
+        scrollTop: $(scrollTo).offset().top - whitespace
+      }, 1000);
+    });
+    });
+    });
+
+    </script>
 
 <head>
   <body>
@@ -16,30 +39,42 @@
       <li><a href="#s4">Идеология «опытного дома переходного типа</a></li>
       <li><a href="#s5">Состав жилого комплекса</a></li>
       <li><a href="#s6">Дом Наркомфина и 5 принципов Ле Корбюзье</a></li>
+
       <ul>
-        <li><a href="s6p1">Внутренняя структура</a></li>
-        <li><a href="s6p2">Типы ячеек-квартир и их распределение</a></li>
-        <li><a href="s6p3">Архитектура коммунального корпуса</a></li>
+        <li><a href="#s6p1">Внутренняя структура</a></li>
+        <li><a href="#s6p2">Типы ячеек-квартир и их распределение</a></li>
+        <li><a href="#s6p3">Архитектура коммунального корпуса</a></li>
         </ul>
-    </sidebar>
+        </ul>
+
+</sidebar>
+<nav class="menubar"
+  <a href='#'><img src="images/logo.svg" alt=""> </a>
+  <span>
+  <a href='#'>Статьи</a>
+  <a href='#'>О проекте</a>
+</span>
+</nav>
 
           <h1 id="s1"> Дом Наркомфина </h1>
           <p><strong>Дом Наркомфина</strong> — один из знаковых памятников архитектуры советского авангарда
-             и конструктивизма. Построен в 1928—1930 годах по проекту архитекторов  Моисея Гинзбурга, Игнатия Милиниса и инженера Сергея Прохорова[1] для работников Народного комиссариата финансов СССР (Наркомфина). Автор замысла дома Наркомфина М.Я. Гинзбург определял его как «опытный дом переходного типа»[2]. Находится в Москве по адресу: Новинский бульвар, дом 25, корпус 1.
-             <p> Долгое время, с начала 1990-х годов, находился в аварийном состоянии, был трижды включён в список «100 главных зданий мира, которым грозит уничтожение»[3]. В 2017—2020 годах отреставрирован[4][5] по проекту АБ «Гинзбург Архитектс», функционирует как жилой дом.</p>
+             и конструктивизма. Построен в 1928—1930 годах по проекту архитекторов  Моисея Гинзбурга, Игнатия Милиниса и инженера Сергея Прохорова для работников Народного комиссариата финансов СССР (Наркомфина). Автор замысла дома Наркомфина М.Я. Гинзбург определял его как «опытный дом переходного типа». Находится в Москве по адресу: Новинский бульвар, дом 25, корпус 1.
+             <p> Долгое время, с начала 1990-х годов, находился в аварийном состоянии, был трижды включён в список «100 главных зданий мира, которым грозит уничтожение». В 2017—2020 годах отреставрирован по проекту АБ «Гинзбург Архитектс», функционирует как жилой дом.</p>
              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/30/Moscow%2C_Narkomfin_building_in_May_2021_03.jpg/2880px-Moscow%2C_Narkomfin_building_in_May_2021_03.jpg" alt="">
 
          <h2 id="s2">История создания дома Наркомфина</h2>
 
-           <P>Дом Наркомфина, или 2-й дом Совнаркома (СНК) РСФСР стал одним из экспериментальных домов, построенных по результатам теоретических исследований Секции типизации Стройкома РСФСР, созданной по инициативе М. Я. Гинзбурга и работавшей под его руководством в 1928—1929 годы (в работе также участвовали М.О. Барщ, В.Н. Владимиров, А.Л. Пастернак, Г.Р. Сум-Шик). Учреждению секции предшествовала работа в 1928 года комиссии Стройкома по отбору типовых проектов жилья для строительства; в комиссию входил и М. Я. Гинзбург. Комиссия пришла к выводу, что большинство известных на тот момент проектов не могут быть использованы как типовые, поэтому для разработки типовых проектов была создана Секция типизации[6]. Подготовкой для работы над новым форматом жилья также стала работа над домом Госстраха на Малой Бронной (1926—1927, М. Я. Гинзбург и В. Н. Владимиров) и конкурс на «эскизный проект жилого дома трудящихся», проведенный журналом «Современная архитектура» (Гинзбург подал на конкурс проект «Коммунального дома А-1»). Выставка проектов конкурса состоялась в июне 1927 года
 
-      <p>Результаты исследования секции М. Я. Гинзбург доложил на пленуме Стройкома РСФСР, где было принято постановление, рекомендовавшее несколько разработанных жилых ячеек к массовому строительству, а остальные — к опытно-показательному, начиная с 1928 года. Согласно этому постановлению было построено шесть «экспериментальных коммунальных домов переходного типа» в Москве, Свердловске и Саратове, причем в строительстве трех из них участвовал сам М.Я. Гинзбург. С.О. Хан-Магомедов называет дом Наркомата финансов самым интересным из этих шести экспериментальных домов[1]. Как пишет Елена Овсянникова, профессор МАрхИ: «Тем не менее, нашелся реальный заказчик на проведение в жизнь эксперимента Стройкома. Им стал Н.А. Милютин, тогда нарком финансов РСФСР». Проект дома Наркомфина создан в 1928—1929 годы, строительство велось в 1929—1930 годы.</p></h4>
+
+           <P>Дом Наркомфина, или 2-й дом Совнаркома (СНК) РСФСР стал одним из экспериментальных домов, построенных по результатам теоретических исследований Секции типизации Стройкома РСФСР, созданной по инициативе М. Я. Гинзбурга и работавшей под его руководством в 1928—1929 годы (в работе также участвовали М.О. Барщ, В.Н. Владимиров, А.Л. Пастернак, Г.Р. Сум-Шик). Учреждению секции предшествовала работа в 1928 года комиссии Стройкома по отбору типовых проектов жилья для строительства; в комиссию входил и М. Я. Гинзбург. Комиссия пришла к выводу, что большинство известных на тот момент проектов не могут быть использованы как типовые, поэтому для разработки типовых проектов была создана Секция типизации. Подготовкой для работы над новым форматом жилья также стала работа над домом Госстраха на Малой Бронной (1926—1927, М. Я. Гинзбург и В. Н. Владимиров) и конкурс на «эскизный проект жилого дома трудящихся», проведенный журналом «Современная архитектура» (Гинзбург подал на конкурс проект «Коммунального дома А-1»). Выставка проектов конкурса состоялась в июне 1927 года
+
+      <p>Результаты исследования секции М. Я. Гинзбург доложил на пленуме Стройкома РСФСР, где было принято постановление, рекомендовавшее несколько разработанных жилых ячеек к массовому строительству, а остальные — к опытно-показательному, начиная с 1928 года. Согласно этому постановлению было построено шесть «экспериментальных коммунальных домов переходного типа» в Москве, Свердловске и Саратове, причем в строительстве трех из них участвовал сам М.Я. Гинзбург. С.О. Хан-Магомедов называет дом Наркомата финансов самым интересным из этих шести экспериментальных домов. Как пишет Елена Овсянникова, профессор МАрхИ: «Тем не менее, нашелся реальный заказчик на проведение в жизнь эксперимента Стройкома. Им стал Н.А. Милютин, тогда нарком финансов РСФСР». Проект дома Наркомфина создан в 1928—1929 годы, строительство велось в 1929—1930 годы.</p></h4>
 
       <h2 id="s3">Сотрудничество М.Я. Гинзбурга и Н.А. Милютина</h2>
 
-      <h4><p>Заказчиком жилого комплекса выступал нарком финансов РСФСР (1924—1929) Николай Милютин, известный как автор схем социалистического расселения и градостроительных концепций соцгорода[8], он же определил функциональные характеристики будущего здания[9]. Сотрудничество наркома Н.А. Милютина и архитектора М.Я. Гинзбурга началось несколько раньше, на строительстве дома Госстраха на Малой Бронной (1926—1927), – Милютин был инициатором строительства двух домов Госстраха в Москве. Идеи Н.А. Милютина об устройстве жилища воплотились при создании дома Наркомфина (Дома-парохода, или 2-го дома СНК).</p>
+      <h4><p>Заказчиком жилого комплекса выступал нарком финансов РСФСР (1924—1929) Николай Милютин, известный как автор схем социалистического расселения и градостроительных концепций соцгорода, он же определил функциональные характеристики будущего здания. Сотрудничество наркома Н.А. Милютина и архитектора М.Я. Гинзбурга началось несколько раньше, на строительстве дома Госстраха на Малой Бронной (1926—1927), – Милютин был инициатором строительства двух домов Госстраха в Москве. Идеи Н.А. Милютина об устройстве жилища воплотились при создании дома Наркомфина (Дома-парохода, или 2-го дома СНК).</p>
 
-      <p>По теории Милютина [10], «значительное повышение жизненного уровня рабочих и развитие обобществлённых форм обслуживания бытовых нужд трудящихся (общественное питание, ясли, детские сады, клубы и т. п.) постепенно уничтожают значение семьи как хозяйственного соединения. Этот процесс неизбежно приведёт, в конечном счёте, к полной переделке семейных форм общежития. <…> Задача раскрепощения женщины от мелкого домашнего хозяйства и вовлечение её в производство заставляет нас ставить вопрос о всемерном содействии этому процессу».</p>
+      <p>По теории Милютина, «значительное повышение жизненного уровня рабочих и развитие обобществлённых форм обслуживания бытовых нужд трудящихся (общественное питание, ясли, детские сады, клубы и т. п.) постепенно уничтожают значение семьи как хозяйственного соединения. Этот процесс неизбежно приведёт, в конечном счёте, к полной переделке семейных форм общежития. <…> Задача раскрепощения женщины от мелкого домашнего хозяйства и вовлечение её в производство заставляет нас ставить вопрос о всемерном содействии этому процессу».</p>
 
       <p>Цель реконструкции быта («новый быт») – ликвидация домашнего хозяйства и семейного уклада жизни, – возможность использовать женщин в качестве рабочей силы на производстве. Эта мысль в «Соцгороде» Милютина выражена вполне отчетливо. Идея «раскрепощения женщины» путем отлучения ее от домашнего хозяйства и вовлечения в производственную деятельность («приобщения ее к общественно-производственному труду») не была изобретением Милютина. Это была правительственная установка, выраженная в Постановлении ЦК ВКП(б) от 15 апреля 1929 г.:</p>
 
@@ -86,21 +121,7 @@
       <p>«Обобществленный», или коммунальный, корпус состоит из объема лестницы -- лаконичного белого параллелепипеда, в западной части, и расположенного за ним основного функционального объема. В уровне 2 этажа к лестнице примыкает навесной переход к жилому корпусу; лестничный объем в своей верхней части выше основного, поскольку кровля решена как эксплуатируемая и лестница обеспечивает выход на нее. Лестница освещена вертикальным окном в ее южной стене. Внутреннее пространство основного объема разделено по высоте на 2 яруса высотой 4,9 и 5,1 м, северный фасад на всю высоту закрыт сплошным витражом, причем контур остекления вынесен вперед и межярусное перекрытие к стеклу не примыкает. Южная часть коммунального корпуса, приблизительно на треть его глубины разделена на 4 яруса, причем 2 и 4 этажи выходят в примыкающие к ним двухсветные пространства северной части как балконы.</p>
       <p>По словам М. Я. Гинзбурга, двигаясь по лестнице и внутри помещений корпуса, «зритель получает непрерывно меняющееся пространственное ощущение»</p>
 
-      <script type="text/javascript">
-      $(function() {
-      $('sidebar a').each(function() {
-      $(this).on('click', function(e) {
-        e.preventDefault();
-        var scrollTo = $(this).attr('href');
-        var whitespace = scrollTo == '#s1' ? 70 : 30;
-        $('html,body').animate({
-          scrollTop: $(scrollTo).offset().top - whitespace
-        }, 1000);
-      });
-      });
-      });
 
-      </script>
 
       </body>
 
